[gsm] Add autostart condition through GSettings

https://bugzilla.gnome.org/show_bug.cgi?id=632724